# face-prediction-rs

./: .gitignore  Cargo.toml  README.md
src/: arcface_image.rs  arcface_predictor.rs  config.rs  image_processor.rs  lib.rs  main.rs  post_processor.rs  ultra_image.rs  ultra_predictor.rs
