[package]
name = "face-prediction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
image = "0.24.7"
imageproc = "0.23.0"
ndarray = "0.15.6"
ort = { version = "1.15.2", features = [ "load-dynamic" ] }
rayon = "1.7"
